# ray-tracing-in-one-weekend-cpp

./: CMakeLists.txt  README.md  gen_image.cpp  main.cpp  vec3.cpp  vec3.hpp
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  utils.h  vec3.h
src/: camera.cc  main.cc  vec3.cc
